[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rxkit"
version = "0.1.2"
description = "Chemical reaction and molecule SMILES canonicalization toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Long"},
]
keywords = ["cheminformatics", "rdkit", "smiles", "canonicalization", "reaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rdkit",
    "pandas",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/CreamyLong/RxKit"
Repository = "https://github.com/CreamyLong/RxKit"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]
